// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async-parser.txt format 1`] = `
====================================options=====================================
parsers: ["async-parser"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
A text will format as "Formatted by async-parser plugin".

=====================================output=====================================
Formatted by async-parser plugin
================================================================================
`;

exports[`with-aync-parser-code-block.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`\`\`async-parser
Async parsers can be used in embeds, so this text will be replaced.
\`\`\`

\`\`\`uppercase-rocks
This text should be uppercased.
\`\`\`

=====================================output=====================================
\`\`\`async-parser
Formatted by async-parser plugin
\`\`\`

\`\`\`uppercase-rocks
THIS TEXT SHOULD BE UPPERCASED.
\`\`\`

================================================================================
`;
